--- a/stylesheets/skeletonic.css
+++ b/stylesheets/skeletonic.css
@@ -1,28 +1,25 @@
 /**
  * Skeletonic v0.0.1
+ * A dead on, lightweight, responsive and modern CSS framework.
  * Copyright © Reedia Limited 2015-2018. All rights reserved.
- * https://skeletonic.io/
+ * https://skeletonic.io
  * Released under the MIT License
  * http://www.opensource.org/licenses/mit-license.php
  */
 
-/* @group Config */
 /* Table Of Content
 ==================================================
-	# Config
+	# Base
 	# Grid
-	# Reset
+	# Typography
 	# Links
 	# Lists
-	# Typography
-	# Utilities
+	# Image
+	# Divider
+	# Util
 ==================================================
 */
-/* @end */
-/* @group Reset */
-* {
-  box-sizing: border-box;
-}
+/* @group Base */
 article,
 aside,
 details,
@@ -44,20 +41,13 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  /** @Development **/
-  /*
-    background: url(../img/12_col.gif) top left no-repeat;
-    background-color: #fff;
-    background-repeat: repeat;
-  */
-  /** @end **/
-  color: #212121;
+  color: #000;
   font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', sans-serif;
   font-size: 1rem;
   font-weight: 400;
-  word-wrap: break-word;
   margin: 0;
   padding: 0;
+  word-wrap: break-word;
 }
 /* @end */
 /* @group Grid */
@@ -68,18 +58,13 @@ body {
   box-sizing: border-box;
   margin: 0 auto;
   max-width: 940px;
+  padding: 0 20px;
   position: relative;
   width: 100%;
-  padding: 0 20px;
 }
 .grid-flex {
   display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
 }
 .row:after {
   clear: both;
@@ -148,35 +133,51 @@ body {
 }
 /* @end */
 /* @group Typography */
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 1.6;
-  font-weight: 500;
-}
 h1 {
   font-size: 2.986rem;
+  font-weight: 500;
   line-height: 1.2;
+  margin-bottom: 1.6;
+  margin-top: 0;
 }
 h2 {
   font-size: 2.488rem;
+  font-weight: 500;
   line-height: 1.25;
+  margin-bottom: 1.6;
+  margin-top: 0;
 }
 h3 {
   font-size: 2.074rem;
+  font-weight: 500;
   line-height: 1.3;
+  margin-bottom: 1.6;
+  margin-top: 0;
 }
 h4 {
   font-size: 1.728rem;
+  font-weight: 500;
   line-height: 1.35;
+  margin-bottom: 1.6;
+  margin-top: 0;
 }
 h5 {
   font-size: 1.44rem;
+  font-weight: 500;
   line-height: 1.5;
+  margin-bottom: 1.6;
+  margin-top: 0;
 }
 h6 {
   font-size: 1.2rem;
+  font-weight: 500;
   line-height: 1.6;
 }
+p {
+  font-size: 1rem;
+  margin: 1.6 0;
+}
+/* csslint ignore:start */
 @media (max-width: 768px) {
   h1 {
     font-size: 2.027rem;
@@ -197,24 +198,22 @@ h6 {
     font-size: 1.125rem;
   }
 }
-p {
-  margin: 1.6 0;
-}
+/* csslint ignore:end */
 /* @end */
 /* @group Links */
 a {
-  color: #1EAEDB;
   background-color: transparent;
+  color: #34d;
 }
 a:active,
 a:hover {
-  color: #188aae;
-  outline: 0; }
+  color: #000;
+}
 /* @end */
 /* @group Lists */
 ul,
 ol {
-  margin: 1.6 0;
+  margin: 1rem 0;
 }
 ul {
   list-style: none outside;
@@ -251,10 +250,6 @@ ol ul {
 /* @end */
 /* @group Image */
 img {
-  color: transparent;
-  font-size: 0;
-  vertical-align: middle;
-  border: 0;
   height: auto;
   max-width: 100%;
 }
@@ -321,11 +316,10 @@ hr {
   flex-direction: column;
   justify-content: center;
 }
-.color-dark-grey {
-  color: #212121;
+.color-black {
+  color: #000;
 }
-.color-light-grey {
-  color: #878787;
+.color-grey {
+  color: #696969;
 }
-
 /* @end */
