--- a/stylesheets/skeletonic.css
+++ b/stylesheets/skeletonic.css
@@ -20,6 +20,20 @@
 ==================================================
 */
 /* @group Base */
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+* {
+  color: #000;
+  font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0.25em 0;
+  padding: 0;
+  word-wrap: break-word;
+}
 article,
 aside,
 details,
@@ -34,20 +48,6 @@ nav,
 section,
 summary {
   display: block;
-}
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-body {
-  color: #000;
-  font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  margin: 0;
-  padding: 0;
-  word-wrap: break-word;
 }
 /* @end */
 /* @group Grid */
@@ -137,45 +137,36 @@ h1 {
   font-size: 2.986rem;
   font-weight: 500;
   line-height: 1.2;
-  margin-bottom: 1.6;
   margin-top: 0;
 }
 h2 {
   font-size: 2.488rem;
   font-weight: 500;
   line-height: 1.25;
-  margin-bottom: 1.6;
   margin-top: 0;
 }
 h3 {
   font-size: 2.074rem;
   font-weight: 500;
   line-height: 1.3;
-  margin-bottom: 1.6;
   margin-top: 0;
 }
 h4 {
   font-size: 1.728rem;
   font-weight: 500;
   line-height: 1.35;
-  margin-bottom: 1.6;
   margin-top: 0;
 }
 h5 {
   font-size: 1.44rem;
   font-weight: 500;
   line-height: 1.5;
-  margin-bottom: 1.6;
   margin-top: 0;
 }
 h6 {
   font-size: 1.2rem;
   font-weight: 500;
   line-height: 1.6;
-}
-p {
-  font-size: 1rem;
-  margin: 1.6 0;
 }
 /* csslint ignore:start */
 @media (max-width: 768px) {
