--- a/stylesheets/skeletonic.css
+++ b/stylesheets/skeletonic.css
@@ -12,9 +12,11 @@
 	# Base
 	# Grid
 	# Typography
+	# Button
 	# Links
 	# Lists
 	# Image
+	# Code
 	# Divider
 	# Util
 ==================================================
@@ -75,7 +77,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: monospace;
   font-size: 1em;
 }
 /* @end */
@@ -241,6 +243,39 @@ h6 {
 }
 /* csslint ignore:end */
 /* @end */
+/* @group Button */
+button,
+.button,
+[type=submit] {
+  background: #e1e2e2;
+  border: 0;
+  cursor: pointer;
+  padding: 9px 20px;
+  text-decoration: none;
+  text-align: center;
+  transition: all 150ms linear;
+}
+button:active,
+.button:active,
+[type=submit]:active {
+  opacity: 0.75;
+  transition: all 150ms linear;
+}
+button:hover,
+.button:hover,
+[type=submit]:hover {
+  background: #f2f2f2;
+  opacity: 0.85;
+  transition: all 150ms linear;
+}
+button:focus,
+.button:focus,
+[type=submit]:focus {
+  background: #f2f2f2;
+  opacity: 0.7;
+  transition: all 150ms linear;
+}
+/* @end */
 /* @group Links */
 a {
   background-color: transparent;
@@ -301,11 +336,30 @@ img {
   max-width: 100%;
 }
 /* @end */
+/* @group Code */
+pre {
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+pre code {
+  display: block;
+  padding: 10px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+code {
+  background: #e7e7e7;
+  font-family: "Consolas", "Monaco", "Menlo", monospace;
+  padding: 2px;
+  white-space: nowrap;
+}
+/* @end */
 /* @group Divider */
 hr {
-  border-width: 1px;
-  margin: 0;
-  padding: 0;
+  border-top: 1px solid #000;
+  border-width: 0;
+  margin-bottom: 0.25em;
+  margin-top: 0.25em;
 }
 /* @end */
 /* @group Utilities */
@@ -367,6 +421,6 @@ hr {
   color: #000;
 }
 .color-grey {
-  color: #696969;
+  color: #e1e2e2;
 }
 /* @end */
