--- a/stylesheets/skeletonic.css
+++ b/stylesheets/skeletonic.css
@@ -39,6 +39,10 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 textarea {
+  -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
   border-color: #e1e2e2;
   min-height: 70px;
 }
@@ -51,11 +55,9 @@ input {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0 auto;
-  max-width: 940px;
-  padding: 0 20px;
-  position: relative;
   width: 100%;
+  padding:0 30px;
+  margin:0 auto;
 }
 @media (min-width: 576px) {
   .container {
